force-app/main/default/objects/Education__c/Education__c.object-meta.xml
<CustomObject>
    <label>Education</label>
    <nameField>
        <displayFormat>EDU-{0000}</displayFormat>
        <label>Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Educations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>