force-app/main/default/objects/Education__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Educations</relationshipLabel>
    <relationshipName>Educations</relationshipName>
    <type>Lookup</type>
</CustomField>