force-app/main/default/objects/Education__c/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Information</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Educations</relationshipLabel>
    <relationshipName>Educations</relationshipName>
    <type>Lookup</type>
</CustomField>