force-app/main/default/objects/Education__c/fields/Qualification_Type__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Type__c</fullName>
    <label>Qualification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>PHD</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Proffessional Degree</fullName>
            </value>
            <value>
                <fullName>Uneducated</fullName>
            </value>
            <value>
                <fullName>HSC</fullName>
            </value>
            <value>
                <fullName>SSC</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>