force-app/main/default/objects/Education__c/fields/Year_of_passing__c.field-meta.xml
<CustomField>
    <fullName>Year_of_passing__c</fullName>
    <label>Year Of Passing</label>
    <length>4</length>
    <type>Text</type>
</CustomField>